--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meme Generator</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
     <h1>meme generator</h1>
+
+    <script src="js/main.js"></script>
+    <script src="js/services/meme-service.js"></script>
 </body>
 
 </html>
