--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 
-<body>
+<body onload="init()">
     <h1>meme generator</h1>
-
-    <script src="js/main.js"></script>
+    <canvas id="meme-canvas"></canvas>
     <script src="js/services/meme-service.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
