gallery added, editor shown and hid added, download option added

--- a/index.html
+++ b/index.html
@@ -10,12 +10,26 @@
 </head>
 
 <body onload="init()">
-    <h1>meme generator</h1>
-    <canvas id="meme-canvas" width="300" height="300"></canvas>
-    <label for="input-text">your text:</label>
-    <input type="text" id="input-text">
-    <button id="add-text-btn" onclick="onAddText()">add</button>
-    <button onclick="onClearCanvas()">clear</button>
+    <h1> Spongebob MemeGen</h1>
+
+
+    <div class="editor hidden">
+        <div class="canvas-container">
+            <canvas id="meme-canvas" width="300" height="300"></canvas>
+        </div>
+        <div class="editor-options">
+            <label for="input-text">your text:</label>
+            <input type="text" id="input-text">
+            <button id="add-text-btn" onclick="onAddText()">add</button>
+            <button onclick="clearAddOns()">clear</button>
+            <button onclick="toggleEditor()">back</button>
+            <a href="#" onclick="downloadCanvas(this)" download="">Download</a>
+        </div>
+    </div>
+
+    <div class="gallery">
+    </div>
+
 
     <script src="js/services/meme-service.js"></script>
     <script src="js/main.js"></script>
