switch lines added, responsivity added

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <div class="editor-options">
             <label for="input-text">your text:</label>
             <input type="text" id="input-text">
-            <button id="add-text-btn" onclick="onAddText()">add</button>
-            <button onclick="clearAddOns()">clear</button>
-            <button onclick="toggleEditor()">back</button>
+            <button id="add-text-btn" onclick="onSwitchLine()">↑↓</button>
+            <button onclick="clearText()">clear all</button>
+            <button onclick="onBack()">back</button>
             <a href="#" onclick="downloadCanvas(this)" download="">Download</a>
         </div>
     </div>
