activate lines by mousedown option added

--- a/index.html
+++ b/index.html
@@ -27,10 +27,8 @@
             <button onclick="onChangeFontSize('decrease')">A-</button>
             <button onclick="onChangeLineHeight('up')">↑</button>
             <button onclick="onChangeLineHeight('down')">↓</button>
-            <button id="add-text-btn" onclick="onSwitchLine()">↑↓</button>
             <button onclick="onClearText()">↺</button>
-            <button onclick="onReady()">ready!</button>
-            <a href="#" onclick="onDownloadCanvas(this)" download="" class="hidden download">Download</a>
+            <a href="#" onclick="onDownloadCanvas(this)" download="" class="download">Download</a>
         </div>
     </div>
 
