download button changed to icon img

--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
             <button onclick="onDeleteLine()">⌧</button>
             <button onclick="onChangeFontSize('increase')">A+</button>
             <button onclick="onChangeFontSize('decrease')">A-</button>
-            <button onclick="onClearText()">↺</button>
-            <a href="#" onclick="onDownloadCanvas(this)" download="" class="download">Download</a>
+            <button onclick="onClearText()">clear all</button>
+            <!-- <a href="#" onclick="onDownloadCanvas(this)" download="" class="download">Download</a> -->
+            <img src="img/icons/download.png" alt="" onclick="onDownloadCanvas(this)" download="" class="icon download">
         </div>
     </div>
 
