download link fix

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             <button onclick="onChangeFontSize('increase')">A+</button>
             <button onclick="onChangeFontSize('decrease')">A-</button>
             <button onclick="onClearText()">clear all</button>
-            <!-- <a href="#" onclick="onDownloadCanvas(this)" download="" class="download">Download</a> -->
-            <img src="img/icons/download.png" alt="" onclick="onDownloadCanvas(this)" download="" class="icon download">
+            <a href="#" onclick="onDownloadCanvas(this)" download="" class="download">
+                <img src="img/icons/download.png" alt="" class="icon"></a>
         </div>
     </div>
 
