--- a/index.html
+++ b/index.html
@@ -11,16 +11,15 @@
 </head>
 
 <body onload="init()">
-    <header>
+    <header id="header">
         <div class="header-container">
             <h1 class="logo" onclick="onLogoClick()"><span class="sponge-symbols-big">+</span>SpongeMeme</h1>
-
-            <a href="#footer" class="about-me"><span class="sponge-symbols-small">&</span>About Me</a>
+            <a href="#footer" class="about-me home"><span class="sponge-symbols-small spongebob">&</span>About Me</a>
         </div>
     </header>
 
 
-    <div class="filter-container">
+    <div class="filter-container home">
         <p class="filter-line">filter by:
             <span class="filter-item" onclick="onFilterBy('krabs')">🦀</span>
             <span class="filter-item" onclick="onFilterBy('spongebob')">🧽</span>
@@ -38,13 +37,21 @@
             </div>
             <div class="editor-options">
                 <input type="text" id="text-input" class="text-input" placeholder="type here!"> <br>
-                <span class="inline-support-message">on-canvas typing supported</span>
+                <p class="inline-support-message">on-canvas typing supported</p>
                 <br>
                 <img src="img/icons/add.png" alt="add line" class="icon" onclick="onAddLine()">
                 <img src="img/icons/delete.png" alt="delete line" class="icon" onclick="onDeleteLine()">
+                <img src="img/icons/bin.png" alt="clear all" class="icon" onclick="onClearText()">
+                <select name="font-select" id="font-select" onchange="onSetFont(this.value)">
+                    <option class="impact">Impact</option>
+                    <option value="sponge" class="sponge">Sponge&</option>
+                    <option class="tahoma">Tahoma</option>
+                    <option class="verdona">Verdana</option>
+                </select>
+                <br>
                 <img class="icon" src="img/icons/increase.png" alt="increase font" onclick="onChangeFontSize(1)">
                 <img class="icon" src="img/icons/decrease-font.png" alt="decrease font" onclick="onChangeFontSize(-1)">
-                <br>
+                <!-- <br> -->
                 <label for="text-fill"><img class="icon fill-icon" src="img/icons/fill2.png" alt="fill color"></label>
                 <input type="color" id="text-fill" name="text-fill" value="#ffffff"
                     oninput="onChangeTextColor(this.value)">
@@ -53,14 +60,7 @@
                 <input type="color" id="text-stroke" name="text-stroke" value="#000000"
                     oninput="onChangeStrokeColor(this.value)">
                 <br>
-                <select name="font-select" id="font-select" onchange="onSetFont(this.value)">
-                    <option class="impact">Impact</option>
-                    <option value="sponge" class="sponge">Sponge&</option>
-                    <option class="tahoma">Tahoma</option>
-                    <option class="verdona">Verdana</option>
-                </select>
-                <br>
-                <img src="img/icons/bin.png" alt="clear all" class="icon" onclick="onClearText()">
+                <span class="ready" onclick="onReady()">"i'm ready!"</span>
                 <a href="#" onclick="onDownloadCanvas(this)" download="" class="download">
                     <img src="img/icons/download.png" alt="download" class="icon"></a>
             </div>
@@ -68,10 +68,10 @@
         <span class="back main-layout" onclick="onBack()">↩</span>
     </div>
 
-    <div class="gallery main-layout">
+    <div class="gallery main-layout home">
     </div>
 
-    <footer id="footer">
+    <footer id="footer" class="home">
         <div class="footer-container">
             <div><img src="img/me.jpg" alt="my image" class="my-image"> <br>
                 <span> <a href="https://github.com/Almoglem"><img src="img/icons/github.png " target="_blank"
@@ -95,6 +95,8 @@
                 </p>
             </div>
         </div>
+
+        <div class="back-up"><a href="#header">upꜛ</a></div>
     </footer>
 
     <script src="js/services/meme-service.js"></script>
