--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 </head>
 
 <body onload="init()">
+
+    <!-- HEADER -->
     <header id="header">
         <div class="header-container">
             <h1 class="logo" onclick="onLogoClick()"><span class="sponge-symbols-big">+</span>SpongeMeme</h1>
@@ -18,7 +20,7 @@
         </div>
     </header>
 
-
+    <!-- FILTER BY-->
     <div class="filter-container home">
         <p class="filter-line">filter by:
             <span class="filter-item" onclick="onFilterBy('krabs')">🦀</span>
